# balls_game_cpp_fun_hehe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  settings.cpp  settings.h
